--- a/res/css/style.css
+++ b/res/css/style.css
@@ -40,7 +40,7 @@ ul {
     display: flex;
 }
 
-nav a {
+nav a { /* descendant Selector */
     padding: 20px 20px;
     text-transform: uppercase;
     text-decoration: none;
@@ -49,9 +49,13 @@ nav a {
     display: block;
 }
 
-nav a:hover {
-    transform: scale(1.1);
+nav a:hover { /* pseudo class usage */
+    transform: scale(.9);
+    border-radius: 20px;
     background-color: #131313;
+}
+nav > img { /* usage of child selector */
+    margin-right: 5%;
 }
 
 .feed {
@@ -74,7 +78,8 @@ nav a:hover {
     margin: 20vh auto;
     width: 50%;
     height: 80%;
-    display: block;
+    display: flex;
+    flex-direction: column;
     background-color: gray;
     border-radius: 15px; 
     padding: 2em;
@@ -84,10 +89,11 @@ nav a:hover {
 }
 
 .login-box h2, p {
-    color: brown;
+    color:crimson;
 }
 
-.login-box button {
+
+#login-button input { /*using id here*/
     background-color: cornflowerblue;
     border: none;
     color: white;
@@ -138,21 +144,26 @@ nav a:hover {
     transform: scale(1.3);
 }
 
-
+@media(min-width: 1800px){ /* for really large screens */
+    .login-box{
+        width: 20%;
+    }
+}
 @media (max-width: 1800px) {
-    .post {
+    .post, .login-box {
         width: 50%;
     }
+
 }
 
 @media (max-width: 1400px) {
-    .post {
+    .post, .login-box {
         width: 60%;
     }
 }
 
 @media (max-width: 800px) {
-    .post {
+    .post, .login-box {
         width: 90%;
     }
 }
