addPost html and css

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -144,6 +144,82 @@ nav > img { /* usage of child selector */
     transform: scale(1.3);
 }
 
+/* addPost section --------------------------------------------------- */
+
+.addPost-box {
+    margin: 20vh auto;
+    width: 33%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    background-color: gray;
+    border-radius: 15px;
+    padding: 2em;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.addPost-box button {
+    background-color: navy;
+    border: none;
+    color: white;
+    padding: 1vh 1vh;
+    text-align: center;
+    cursor: pointer;
+    font-size: 3vh;
+}
+
+.addPost-postBody {
+    display: flex;
+    flex-direction: row;
+    padding: 4vh;
+}
+
+.addPost-postBody p {
+    color: white;
+    display: flex;
+    font-size: 3vh;
+}
+
+.addPost-selectFile {
+    display: flex;
+    flex-direction: row;
+    padding: 4vh;
+}
+
+.addPost-selectFile p {
+    color: white;
+    vertical-align: middle;
+    margin-bottom: 0;
+    font-size: 3vh;
+    margin: 3vh;
+}
+
+.addPost-postBody textarea {
+    width: 100%;
+    height: 150px;
+    border: solid 1px darkgray;
+    padding: 1vh 1vh;
+    font-size: 3vh;
+}
+
+.addPost-selectFile button {
+    background-color: darkgray;
+    border: solid 1px black;
+    color: white;
+    padding: 1vh 1vh;
+    text-align: center;
+    cursor: pointer;
+    font-size: 3vh;
+}
+
+.profile-button {
+    padding-right: 1em;
+}
+
+/* --------------------------------------------------------------------------------- */
+
 @media(min-width: 1800px){ /* for really large screens */
     .login-box{
         width: 20%;
